contrib/istio-example/squash-client.yml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  labels:
    app: squash-client
  name: squash-client
spec:
  template:
    metadata:
      labels:
        app: squash-client
    spec:
      hostPID: true
      containers:
      - name: squash-client
        image: soloio/squash-client:v0.2.0-46-gf2c3713
        volumeMounts:
        - mountPath: /var/run/cri.sock
          name: crisock
        securityContext:
          privileged: true
        ports:
        - containerPort: 1234
          protocol: TCP
      volumes:
      - name: crisock
        hostPath:
          path: /var/run/dockershim.sock
