contrib/istio-example/squash-server.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: squash-server
  labels:
    app: squash-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: squash-server
  template:
    metadata:
      labels:
        app: squash-server
    spec:
      serviceAccountName: squash-server
      containers:
      - name: squash-server
        image: soloio/squash-server:v0.2.0-46-gf2c3713
        ports:
        - containerPort: 8080
          protocol: TCP
          name: http-squash-api
---
kind: Service
apiVersion: v1
metadata:
  name: squash-server
spec:
  selector:
    app: squash-server
  ports:
    - name: http-squash-api
      protocol: TCP
      port: 80
      targetPort: 8080
