contrib/istio-example/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: calcingress
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: example-service1
          servicePort: 80
      - path: /calc
        backend:
          serviceName: example-service1
          servicePort: 80
      - path: /calculate
        backend:
          serviceName: example-service2
          servicePort: 80
